# hypa

./: .gitignore  LICENSE  README.md  __init__.py  hypa.py  hypa_networkx.py  hypa_ngram.py  hypa_pathpy.py  pyproject.toml  requirements.txt  setup.py
data/: coupons_2018_01-5percent.ngram
hypa/: __init__.py  computexi.py  ghype.py  hypa.py  hypa_networkx.py  hypa_pathpy.py
hypa/compute/: __init__.py  hypa.py
hypa/hypernet/: __init__.py  computexi.py
reproduce/: anomalous_random.py  draw.py  flights_analysis.ipynb  promise.py
